@startuml
'!include styles/card-style.puml

hide generator fields
interface generator <<Strategy>> {
	generate()
}

hide random_generator fields
class random_generator {
	generate()
}

hide reversed_generator fields
class reversed_generator {
	generate()
}

hide sorted_generator fields
class sorted_generator {
	generate()
}

generator <|.. random_generator
generator <|.. reversed_generator
generator <|.. sorted_generator

@enduml
